--- a/vercel.json
+++ b/vercel.json
@@ -1,37 +1,8 @@
 {
-  "version": 2,
-  "builds": [{ "src": "./index.js", "use": "@vercel/node" }],
-  "routes": [
-    {
-      "src": "/api/*",
-      "dest": "index.js"
-    },
-    {
-      "handle": "filesystem"
-    },
-    {
-      "src": "/(.*)",
-      "dest": "/index.js"
-    }
-  ],
-  "env": {
-    "MY_CUSTOM_VAR": "my-custom-value"
-  },
   "rewrites": [
     {
-      "source": "/about",
-      "destination": "/about.html"
-    }
-  ],
-  "headers": [
-    {
-      "source": "/images/(.*)",
-      "headers": [
-        {
-          "key": "Cache-Control",
-          "value": "max-age=604800"
-        }
-      ]
+      "source": "./api/index.js",
+      "destination": "./index.js"
     }
   ]
 }
