--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
     "mongoose": "^8.0.2"
+  },
+  "engines": {
+    "node": ">=18.18.0"
   }
 }
