--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "express-validator": "^7.0.1",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
-    "mongoose": "^8.0.2"
+    "mongoose": "^8.0.2",
+    "stripe": "^14.9.0"
   },
   "engines": {
     "node": ">=18.18.0 <=19.0.0"
